fix: Increase top padding in home layout for better spacing

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,5 +1,6 @@
 .home {
   padding: 2rem 5%;
+  padding-top: 4rem;
   display: flex;
   flex-direction: column;
   height: calc(100vh - 4rem);
